src/objects/Case_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balance_Due__c</fullName>
        <label>Balance Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Case_Invoice_Status__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case - Invoice Status</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Invoice Status Details</relationshipLabel>
        <relationshipName>Invoice_Status_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Remittance_Detail__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case - Remittance Detail</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Remittance Details</relationshipLabel>
        <relationshipName>Remittance_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Details</relationshipLabel>
        <relationshipName>Case_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EFT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Reference__c</fullName>
        <label>Payment Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <label>Purchase Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Number__c</fullName>
        <label>Vendor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountType__c</field>
                <operation>equals</operation>
                <value>Vendor Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Case Details</relationshipLabel>
        <relationshipName>Case_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Case Detail</label>
    <nameField>
        <displayFormat>CD-{000000}</displayFormat>
        <label>Case Detail Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Details</pluralLabel>
    <recordTypes>
        <fullName>Invoice_Status</fullName>
        <active>true</active>
        <label>Invoice Status</label>
    </recordTypes>
    <recordTypes>
        <fullName>Remittance_Details</fullName>
        <active>true</active>
        <label>Remittance Details</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>